pyproject, added save_all_sessions function, added docstrings and types, moved logging to hydra

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,6 +12,20 @@ hydra:
     dir: outputs/${now:%Y-%m-%d_%H-%M-%S}
   job:
     name: ${training.setup_name}
+  job_logging:
+    level: INFO
+    formatters:
+      simple:
+        format: "%(asctime)s | %(levelname)s | %(message)s"
+        datefmt: "%Y-%m-%d %H:%M:%S"
+    handlers:
+      console:
+        class: logging.StreamHandler
+        formatter: simple
+        stream: ext://sys.stdout
+    root:
+      handlers: [console]
+
 
 # Override any settings here if needed
 # For example:
