--- a/train_template/pyproject.toml
+++ b/train_template/pyproject.toml
@@ -1,23 +1,25 @@
 [project]
-name = "mlni-scuffed"
+name = "train-template"
 version = "0.1.0"
-description = "Add your description here"
+description = "Template to quickly get started with training a brain foundation model"
 readme = "README.md"
-requires-python = ">=3.13"
+authors = [
+    { name = "Andrii Zahorodnii", email = "zaho@mit.edu" }
+]
+requires-python = ">=3.11"
 dependencies = [
     "h5py>=3.14.0",
     "hydra-core>=1.3.2",
-    "mne-bids>=0.17.0",
-    "pandas>=2.3.3",
-    "psutil>=7.1.0",
+    "lightning>=2.5.5",
     "python-dotenv>=1.1.1",
-    "pytorch-lightning>=2.5.5",
     "temporaldata>=0.1.3",
+    "torch>=2.8.0",
     "transformers>=4.57.0",
 ]
 
 [dependency-groups]
 dev = [
+    "mypy>=1.18.2",
     "ruff>=0.13.3",
 ]
 
@@ -28,3 +30,9 @@ line-length = 320
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
 ignore = ["E501", "E402"]            # let the formatter handle wrapping
+
+[tool.mypy]
+python_version = "3.11"
+exclude = ["\\.venv", "env", "build", "dist"]
+follow_imports = "skip"  # don't analyze third-party libs
+ignore_missing_imports = true
