--- a/ieeg_temporaldata/pyproject.toml
+++ b/ieeg_temporaldata/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "data-converter"
+name = "ieeg-temporaldata"
 version = "0.1.0"
 description = "A library for converting various neural data formats into a standardized temporaldata format."
 authors = [
