--- a/ieeg_temporaldata/pyproject.toml
+++ b/ieeg_temporaldata/pyproject.toml
@@ -3,7 +3,8 @@ name = "ieeg-temporaldata"
 version = "0.1.0"
 description = "A library for converting various neural data formats into a standardized temporaldata format."
 authors = [
-    { name = "Andrii Zahorodnii", email = "zaho@mit.edu" }
+    { name = "Andrii Zahorodnii" },
+    { name = "Alexander Brady" }
 ]
 readme = "README.md"
 requires-python = ">=3.11"
