--- a/ieeg_temporaldata/pyproject.toml
+++ b/ieeg_temporaldata/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pandas>=2.3.3",
     "python-dotenv>=1.1.1",
     "temporaldata>=0.1.3",
+    "brainsets"
 ]
 
 [dependency-groups]
