--- a/mlni/pyproject.toml
+++ b/mlni/pyproject.toml
@@ -9,7 +9,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "h5py>=3.14.0",
     "numpy>=2.3.3",
+    "psutil>=7.1.0",
+    "temporaldata>=0.1.3",
     "torch>=2.8.0",
 ]
 
