--- a/train_template/pyproject.toml
+++ b/train_template/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "h5py>=3.14.0",
     "hydra-core>=1.3.2",
     "lightning>=2.5.5",
+    "psutil>=7.1.0",
     "python-dotenv>=1.1.1",
     "temporaldata>=0.1.3",
     "torch>=2.8.0",
@@ -31,6 +32,9 @@ line-length = 320
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
 ignore = ["E501", "E402"]            # let the formatter handle wrapping
+
+[tool.ruff.lint.isort]
+known-first-party = ["mlni"]
 
 [tool.mypy]
 python_version = "3.11"
